# Direction-Sense-using-Neural-Network

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: main.cpp
src/ui/: Main.qml
src/ui/others/home-tabs/: Input.qml  Output.qml  Processing.qml
src/ui/pages/: app-settings.qml  home.qml
